# server/src/openapi/index.js
@@ -1,27 +1,54 @@
 import yaml from 'js-yaml';
 import { readFileSync } from 'fs';
-import { dirname, resolve } from 'path';
+import { resolve, dirname } from 'path';
 import { fileURLToPath } from 'url';
 
 const __dirname = dirname(fileURLToPath(import.meta.url));
-console.log(__dirname)
-// export const swaggerDoc = yaml.load(readFileSync(__dirname+'/openapi.yml', 'utf8'));
 
+// Función para cargar y parsear archivos YAML
 function parseYaml(file) {
-    return yaml.load(readFileSync(resolve(__dirname, `${file}.yml`), 'utf8'));
-}
+    return yaml.load(readFileSync(resolve(__dirname, `${file}.yml`), "utf8"));
+  }
 
+// Definición del objeto swaggerDoc
 export const swaggerDoc = {
     openapi: "3.0.0",
     info: {
-        title: "Somni Joyas",
-        description: "Venta de articulos de joyeria",
+        title: "API Somni joyas",
+        description: "API for SomnoJoyas DB management",
     },
-    paths: parseYaml('paths'),
+    servers: [
+        {
+            url: 'http://localhost:3000',
+        },
+        {
+            url: 'https://somniapi.onrender.com',
+        },
+    ],
     components: {
         schemas: parseYaml('schemas'),
         securitySchemes: parseYaml('security'),
         examples: parseYaml('examples'),
         responses: parseYaml('responses'),
     },
+    paths: {
+        ...parseYaml('orders'),
+        ...parseYaml('users'),
+        ...parseYaml('articles'),
+        ...parseYaml('misc'),
+    },
+    tags: [
+        {
+            name: 'Orders',
+            description: 'Order-related endpoints',
+        },
+        {
+            name: 'Users',
+            description: 'User-related endpoints',
+        },
+        {
+            name: 'Articles',
+            description: 'Articles-related endpoints',
+        },
+    ]
 };
